Fixade in Autotest för grund av automateseringen och feature. La in Mainweb som är class för webbläsaren.